fixed heading sizes on all ver, fixed more spacing issues

--- a/sass/components/goals.scss
+++ b/sass/components/goals.scss
@@ -14,7 +14,8 @@
 	align-items: center;
 
 	p {
-		margin: 0px;
+		margin-bottom: 0px;
+		margin-top: 12px;
 	}
 
 	#goals-left {
@@ -51,7 +52,7 @@
 		@media screen and (max-width: 1460px) {
 
 				.goals-heading {
-					font-size: calc(1.3em + 2vw);
+					font-size: calc(1.4em + 1.5vw);
 				}
 
 				.goals-info {
@@ -75,10 +76,6 @@
 
 			@media screen and (max-width: 1140px) {
 
-				.goals-heading {
-					font-size: 3rem;
-				}
-
 				.goals-info {
 
 					.goals-desc {
@@ -101,12 +98,11 @@
 			@media screen and (max-width: $medium) {
 
 				.goals-heading {
-					font-size: 3rem;
+					font-size: 4rem;
 					text-align: left;
 				}
 
 				.goals-info {
-					font-size: 1.15rem;
 					text-align: left;
 
 					.goals-desc p br {
@@ -118,24 +114,13 @@
 						line-height: 32px;
 					}
 				}
-			}
-
-			@media screen and (max-width: $medium) {
-
-				.goals-info {
-
-					.goals-desc {
-						font-size: 1.75rem;
-						line-height: 32px;
-					}
-				}
 
 				.goals-info p {
-					margin-top: 5%;
+					margin-top: 4%;
 				}
 
 				.goals-info p:last-child {
-					margin-bottom: 5%;
+					margin-bottom: 4%;
 				}
 			}
 
